--- a/app.json
+++ b/app.json
@@ -1,36 +1,58 @@
 {
   "expo": {
-    "name": "Echo",
-    "slug": "Echo",
-    "version": "1.0.0",
+    "name": "Echo News App by Benson",
+    "slug": "echoNewsAppByBenson",
+    "description": "Echo is a news aggregator app where you can get all your news in one place",
+    "version": "1.0.1",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "icon": "./src/assets/images/icon.png",
+    "scheme": "echo-news-app",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./src/assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.bensonibeabuchi.echoNewsAppByBenson",
+      "buildNumber": "1.0.1",
+      "entitlements": {
+        "aps-environment": "development"
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./src/assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.bensonibeabuchi.echoNewsAppByBenson",
+      "versionCode": 1,
+      "permissions": [
+        "NOTIFICATIONS"
+      ]
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./src/assets/images/favicon.png"
     },
     "plugins": [
       "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "5f09be88-4c60-48b3-b6ad-538326f0093a"
+      }
+    },
+    "notification": {
+      "icon": "./src/assets/images/icon.png",
+      "color": "#000000",
+      "androidMode": "default",
+      "androidCollapsedTitle": "New notifications"
     }
   }
 }
