--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "@react-navigation/native": "^6.0.2",
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
+    "expo": "~51.0.39",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-router": "~3.5.24",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
-    "expo-updates": "^0.25.27",
+    "expo-updates": "~0.25.28",
     "expo-web-browser": "~13.0.3",
     "loadash": "^1.0.0",
     "nativewind": "^2.0.11",
